# dont-slam-your-head

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
android/: .gitignore
android/app/: build.gradle
android/app/src/androidTest/java/de/joshuareibert/dontslamyourhead/: ApplicationTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/de/joshuareibert/dontslamyourhead/: CameraView.java  MainActivity.java
android/app/src/main/jni/: Android.mk  Application.mk  boost.mk  g2o.mk  hello-jni.c  hello-jni.cpp  lsd-jni.cpp  lsdtest.cpp  lsdtest.hpp
android/app/src/main/jni/g2o/: Android.mk
android/app/src/main/jni/lsd_slam/GlobalMapping/: KeyFrameGraph.cpp
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
app/: CMakeLists.txt
app/src/: main.cpp
apps/: CMakeLists.txt
apps/camera_calibration/: CMakeLists.txt  sample_config.xml
apps/dont_slam_your_head/: CMakeLists.txt
apps/dont_slam_your_head/include/: OpenCVInputImageStream.hpp  PrintOutput3DWrapper.hpp
apps/dont_slam_your_head/src/: OpenCVInputImageStream.cpp  PrintOutput3DWrapper.cpp  main.cpp
camera_calibration/: CMakeLists.txt  README.md  images.xml  sample_config.xml
camera_calibration/src/: camera_calibration.cpp
cmake/: FindG2O.cmake
config/: calib_logitech_c270.cfg  calib_logitech_c270.txt  calib_logitech_c270_small.cfg
lsd_slam/: CMakeLists.txt  LSD_SOURCES  LiveSLAMWrapper.cpp  LiveSLAMWrapper.h  SlamSystem.cpp  SlamSystem.h
lsd_slam/DepthEstimation/: DepthMap.cpp  DepthMap.h  DepthMapPixelHypothesis.cpp  DepthMapPixelHypothesis.h
lsd_slam/GlobalMapping/: KeyFrameGraph.cpp
lsd_slam/IOWrapper/: ImageDisplay.h  PrintOutput3DWrapper.cpp  PrintOutput3DWrapper.h  TimestampedObject.h
lsd_slam/IOWrapper/OpenCV/: ImageDisplay_OpenCV.cpp  InputImageStream_OpenCV.cpp
lsd_slam/IOWrapper/cout/: CoutOutput3DWrapper.cpp  CoutOutput3DWrapper.h
lsd_slam/Tracking/: LGSX.h  Relocalizer.cpp  SE3Tracker.cpp  SE3Tracker.h  Sim3Tracker.cpp
lsd_slam/util/: Undistorter.cpp  Undistorter.h  globalFuncs.cpp  globalFuncs.h  settings.cpp  settings.h
test-lsd-slam/: CMakeLists.txt  test.cpp  test.hpp
unity/: .gitignore
unity-project/: .gitignore
unity-project/Assets/: Red.mat  Spin.cs  test.unity
unity-project/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
unity/Assets/: BoxCloud.cs  BoxMaterial.mat  DepthTexture.cs  SLAM.cs  Tracking.cs  TrackingDisplay.cs
unity/Assets/Cardboard/DemoScene/: DemoScene.unity
unity/Assets/Plugins/Android/: AndroidManifest.xml  MainActivity.cs
unity/ProjectSettings/: ProjectSettings.asset
utils/: dont_slam_your_head.sublime-project  format_code.sh  make-android.sh  make.sh  update-unity.sh
