FILE(GLOB_RECURSE LSD_SOURCES "*/*.cpp")
LIST(APPEND LSD_SOURCES
	"LiveSLAMWrapper.cpp"
	"SlamSystem.cpp"
	)

ADD_LIBRARY(lsdslam SHARED ${LSD_SOURCES})
TARGET_LINK_LIBRARIES(lsdslam
	${FABMAP_LIB}
	${CSPARSE_LIBRARY}
	${G2O_CORE_LIBRARY}
	${G2O_EXT_CSPARSE}
	${G2O_SOLVER_CSPARSE}
	${G2O_SOLVER_CSPARSE_EXTENSION}
	${G2O_STUFF_LIBRARY}
	${G2O_TYPES_SBA}
	${G2O_TYPES_SIM3}
	${Boost_LIBRARIES}
	${OpenCV_LIBS}
	)
